2007-06-19  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Project/CProject.cs: CProject does want it's tags written.

2007-06-18  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Project/CProjectServiceExtension.cs, Project/CProject.cs: Changed to
	  accomodate the new CTagsCompletion design.

2007-06-17  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Compiler/GNUCompiler.cs: Added debug information creation for the
	  Debug configuration and fixed bug where the target output was not
	  buing built when it should be.

2007-06-17  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Gui/CodeGenerationPanel.cs, Project/CCompilationParameters.cs,
	  Project/CProject.cs, Compiler/GNUCompiler.cs: The extra compiler
	  and extra linker options is now shown is an TextView in the code
	  generation panel and I added define symbols support.
